--- a/blog.html
+++ b/blog.html
@@ -106,7 +106,7 @@ header { margin-bottom: 3rem; }
   position: fixed;
   z-index: 999;
   inset: 0;
-  background: rgba(0,0,0,0.4);
+  background: transparent;
   justify-content: center;
   align-items: flex-start; /* importante: arriba, no center */
   padding-top: 6rem; /* esto reemplaza margin-top */
