Actualizacion hero index

--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 <section class="hero-landing">
   <div class="content">
     <h1 class="fade-in">Viaja con</h1>
-    <h2 class="fade-in">Comodidad y Seguridad</h2>
-    <p class="fade-in">Desde San José de Mayo conectamos Uruguay y el mundo.<br>
-       Destinos nacionales e internacionales con el mejor servicio.</p>
+    <h2 class="fade-in">Nosotros</h2>
+    <p class="fade-in">"El camino es siempre mejor que la posada"</p>
 
     <div class="buttons fade-in">
       <a href="destinos.html">Destinos</a>
@@ -95,6 +94,7 @@
     </article>
   </div>
 </section>
+
 
 <style>
 /* ------------------ ANIMACIÓN DESTINOS ------------------ */
