1era reunion pt1

--- a/index.html
+++ b/index.html
@@ -62,37 +62,41 @@
 <section id="destinos" class="section">
   <h3 class="title">Destinos destacados</h3>
   
-  <div class="grid">
-    <article class="card">
-      <a href="rio.html">
-        <div class="img-wrapper">
-          <img src="dest1.jpg" alt="Colonia del Sacramento">
-        </div>
-      </a>
-      <h4>Colonia del Sacramento</h4>
-      <p>Historia, arquitectura y gastronomía a una hora de viaje.</p>
-    </article>
+<div class="grid">
+  <!-- Paquete 1 -->
+  <article class="card">
+    <a href="paquete-termas.html">
+      <div class="img-wrapper">
+        <img src="termasbr.jpg" alt="Termas Romanas en Brasil">
+      </div>
+    </a>
+    <h4>Paquete 1: Termas</h4>
+    <p>Relajate en las espectaculares Termas Romanas de Brasil. Incluye alojamiento, acceso ilimitado a los complejos termales y traslados.</p>
+  </article>
 
-    <article class="card">
-      <a href="rio.html">
-        <div class="img-wrapper">
-          <img src="dest2.jpg" alt="Punta del Este">
-        </div>
-      </a>
-      <h4>Punta del Este</h4>
-      <p>Playas, paradores y vida nocturna premium.</p>
-    </article>
+  <!-- Paquete 2 -->
+  <article class="card">
+    <a href="paquete-solplaya.html">
+      <div class="img-wrapper">
+        <img src="floripa.jpg" alt="Playas de Florianópolis y alrededores">
+      </div>
+    </a>
+    <h4>Paquete 2: Sol y Playa</h4>
+    <p>Viví la magia de Florianópolis y sus alrededores: arenas blancas, mar cristalino y días de pura energía brasileña.</p>
+  </article>
 
-    <article class="card">
-      <a href="rio.html">
-        <div class="img-wrapper">
-          <img src="dest3.jpg" alt="Río de Janeiro">
-        </div>
-      </a>
-      <h4>Río de Janeiro</h4>
-      <p>Aventura internacional con paquetes todo incluido.</p>
-    </article>
-  </div>
+  <!-- Paquete 3 -->
+  <article class="card">
+    <a href="paquete-naturaleza.html">
+      <div class="img-wrapper">
+        <img src="iguacu.jpg" alt="Ciudad del Este e Iguazú">
+      </div>
+    </a>
+    <h4>Paquete 3: Naturaleza y Compras</h4>
+    <p>Explorá las majestuosas Cataratas del Iguazú y disfrutá de compras imperdibles en Ciudad del Este, todo en un solo viaje.</p>
+  </article>
+</div>
+
 </section>
 
 
@@ -254,7 +258,7 @@
     </a>
   </div>
   <div style="flex:1;min-width:280px;">
-    <img src="elturistabus2.jpg" alt="El Turista Rent a Bus" class="fade-in" style="width:100%;border-radius:12px;box-shadow:0 4px 14px rgba(0,0,0,0.08);">
+    <img src="rentabus.png" alt="El Turista Rent a Bus" class="fade-in" style="width:100%;border-radius:12px;">
   </div>
 </section>
 
