--- a/sobre.html
+++ b/sobre.html
@@ -178,14 +178,32 @@
     <p class="fade-in">Brindar experiencias de viaje auténticas y memorables, fomentando la conexión con los destinos y la cultura local.</p>
   </div>
 
+  <!-- Inclusividad y Valores -->
+<section class="about-section fade-in" style="padding:60px 20px; background:#f8faff; border-radius:20px; box-shadow:0 8px 25px rgba(0,0,0,0.08); margin-bottom:60px;">
+  <h3 class="fade-in" style="text-align:center; font-size:2rem; margin-bottom:30px;">🤝 Inclusividad y Bienestar en Cada Viaje</h3>
+
+  <div style="display:flex; flex-wrap:wrap; align-items:center; justify-content:center; gap:30px;">
+    <img src="pictograma.png" alt="Pictograma de inclusividad, calma, ayuda, bus y neurodiversidad" class="fade-in" style="max-width:420px; border-radius:16px;">
+
+    <div style="flex:1; min-width:280px; max-width:600px;">
+      <p class="fade-in" style="font-size:1.1rem; line-height:1.7; margin-bottom:1rem;">
+        En <strong>El Turista</strong>, creemos que viajar es una experiencia que debe estar al alcance de todos. Nuestro compromiso con la <strong>inclusividad</strong> y la <strong>neurodiversidad</strong> nos impulsa a crear entornos amables, seguros y respetuosos para cada persona.
+      </p>
+      <p class="fade-in" style="font-size:1.1rem; line-height:1.7;">
+        El pictograma representa nuestros valores esenciales: <em>calma, ayuda, empatía, accesibilidad</em> y el placer de viajar en comunidad. Cada viaje es una oportunidad de conectar, comprender y disfrutar sin barreras.
+      </p>
+    </div>
+  </div>
+</section>
+
   <!-- Nuestro Bus — Sección Deluxe -->
   <section class="about-section fade-in" style="padding:60px 20px; background: linear-gradient(135deg, #e3f2fd, #ffffff); border-radius:20px; box-shadow:0 8px 25px rgba(0,0,0,0.1); margin-bottom:60px;">
     <h3 class="fade-in" style="text-align:center; font-size:2rem; margin-bottom:30px;">🚌 Nuestro Bus — Confort y Seguridad</h3>
 
     <!-- Imagen del bus -->
     <div class="bus-gallery">
-      <img src="elturistabus2.jpg" alt="Nuestro bus — 48 plazas, seguro y cómodo" class="fade-in">
-      <img src="elturistabus3.jpg" alt="Nuestro bus — 48 plazas, seguro y cómodo" class="fade-in">
+      <img src="turistachasis.jpg" alt="Nuestro bus — 48 plazas, seguro y cómodo" class="fade-in">
+      <img src="bocetoturista.jpg" alt="Nuestro bus — 48 plazas, seguro y cómodo" class="fade-in">
     </div>
 
     <!-- Lista de características -->
