--- a/rentabus.html
+++ b/rentabus.html
@@ -52,7 +52,6 @@
       width: 100%;
       border-radius: 14px;
       margin-bottom: 20px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
     }
 
     form input, form textarea, form button {
@@ -119,7 +118,7 @@
   <section class="contact-wrap">
     <!-- 🚌 Info -->
     <div class="contact-card fade-in">
-      <img src="elturistabus.jpg" alt="Rent a Bus El Turista" class="service-img fade-in">
+      <img src="rentabus.png" alt="Rent a Bus El Turista" class="service-img fade-in">
       <h3 class="fade-in" style="font-size:1.6rem; margin-bottom:10px;">Detalles del servicio</h3>
       <p class="fade-in" style="color:#555; margin-bottom:20px;">
         Un moderno coche semicama de <strong>48 plazas</strong>, con chofer profesional y todas las comodidades para tu grupo.
