header footer y quoery

--- a/blog.html
+++ b/blog.html
@@ -227,10 +227,10 @@ header { margin-bottom: 3rem; }
 </head>
 <body>
 
-<header class="fade-in">
+<header>
   <div class="container">
     <nav>
-      <div class="brand fade-in">
+      <div class="brand">
         <a href="index.html">
           <img src="logo.png" alt="El Turista logo" class="logoturista">
         </a>
@@ -238,7 +238,7 @@ header { margin-bottom: 3rem; }
           <div style="font-size:12px;color:var(--muted)">Desde San José, Uruguay</div>
         </div>
       </div>
-      <div class="navlinks fade-in">
+      <div class="navlinks">
          <a href="index.html">Inicio</a>
         <a href="blog.html">Blog</a>
         <a href="sobre.html">Sobre Nosotros</a>
@@ -528,7 +528,7 @@ header { margin-bottom: 3rem; }
     </div>
   </section>
 
-  <div class="cta-box fade-in">
+  <div class="cta-box">
     <h3>¿Querés más inspiración viajera?</h3>
     <a href="contacto.html">✈️ Planificá tu viaje con nosotros</a>
   </div>
