--- a/sobre.html
+++ b/sobre.html
@@ -4,11 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>El Turista — Sobre nosotros</title>
-
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
   <!-- Styles -->
   <link rel="stylesheet" href="styles.css">
   <style>
@@ -109,6 +107,16 @@
   font-size: 2rem; /* tamaño normal en desktop */
 }
 
+.titlenuestro {
+  font-size: 2rem; /* tamaño normal en desktop */
+}
+
+
+@media (max-width: 768px) {
+  .titlenuestro {
+    font-size: 1.6rem; /* un poco más chico en tablets */
+  }
+}
 @media (max-width: 768px) {
   .pictogramatitulo {
     font-size: 1.6rem; /* más chico en móviles */
@@ -128,7 +136,7 @@
       }
 
       .bus-gallery img {
-        width: 90%;
+        width: 100%;
         max-width: 500px;
       }
         .pictograma2 img {
@@ -173,7 +181,6 @@
     </nav>
   </div>
 </header>
-
 <main class="container">
 
   <!-- Hero -->
@@ -214,7 +221,7 @@
 
   <!-- Nuestro Bus — Sección Deluxe -->
   <section class="about-section fade-in" style="padding:60px 20px; background: linear-gradient(135deg, #e3f2fd, #ffffff); border-radius:20px; box-shadow:0 8px 25px rgba(0,0,0,0.1); margin-bottom:60px;">
-    <h3 class="fade-in" style="text-align:center; font-size:2rem; margin-bottom:30px;">🚌 Nuestro Bus — Confort y Seguridad</h3>
+    <h3 class=" titlenuestro fade-in" style="text-align:center; margin-bottom:2rem;">🚌 Nuestro Bus — Confort y Seguridad</h3>
 
     <!-- Imagen del bus -->
     <div class="bus-gallery">
@@ -281,9 +288,7 @@
   </div>
 
 </main>
-
 <br><br>
-
 <!-- FOOTER -->
 <footer class="footer">
   <style>
